--- a/src/assets/css/SearchForm.css
+++ b/src/assets/css/SearchForm.css
@@ -1,13 +1,18 @@
 .search-form {
   display: flex;
+  justify-content: flex-start;
 }
 
 .search-form-main {
-  width: 800px;
   font-size: 20px;
   margin: 5px;
-  /* background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%); */
+}
+
+#search {
+  border-radius: 5px;
+  font-size: 15px;
+  height: 30px;
+  align-self: center;
 }
 
 .form-row {
@@ -62,49 +67,4 @@ input {
   border: none;
   font-size: 15px;
   color: #333;
-    /* display: inline-block; */
-    /* position: relative; */
-    /* box-sizing: border-box; */
 }
-
-/* .search-form .main {
-  padding: 1em;
-  display: flex;
-  flex-direction: row;
-} */
-
-
-/* .search-form > div {
-  display: flex;
-} */
-
-/* .col {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-
-} */
-
-/* .col > div {
-  font-size: 20px;
-  padding: 1em;
-  flex: 30%;
-  white-space: nowrap;
-} */
-
-
-#buttons {
-    /* display: flex; */
-    /* justify-content: center; */
-}
-
-/* #search {
-  font-size: 17px;
-  font-family: sans-serif;
-  font-weight: bold;
-  border-radius: 20px;
-  padding: 0.7em;
-  margin: 1em;
-  border-style: outset;
-  color: #464a4c;
-} */
